src/main/theme/less/theme.less
//
// IHTSDO Theme
// --------------------------------------------------
.brand{
	font-size: 16px;
	line-height: 20px;
	color: @gray;
	padding: 3px 10px;
	height: 28px;
	border-top: 1px solid @gray-light;
}
.navigation{
	margin-bottom: 20px;
}
.space{
	margin-top: 10px;
}
// Landing Page
//--------------------

.landing{
	background-color: @light-blue;
}
.main-login{
	padding: 30px 10px 20px;
	background-color: rgba(245, 245, 245, 0.6);
	h1{
		font-family: @landing-page;	
		color: @light-blue;
	}
}

.intro{
	color: @white;
	h1{
		margin-top: 40px;
		color: @white;
	}
}
.login{
	background-color: lighten(@cloud, 3%);
	border: 1px solid @gray-lighter;
	padding: 25px 20px 40px;
	margin-top: 40px;
	border-radius: @border-radius-large;
}

#welcome{
	border-bottom: 4px solid @brand-info;
}
#main-content{
	border-top:2px solid @brand-primary;
	background-color: lighten(@cloud, 3%);
}

// Register
//--------------------

.form-welcome{
	width: 400px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;  
	float: right;
	color: @gray;
	background-color: @white;
	padding: 15px;
	position: relative;
	left: 30px;
}


// Terms of Service
//--------------------
.masthead{
	background-color: @white;
}
.tos-bg{
    background-color: #EEEEEE;
    margin: 10px 0;
    overflow: hidden;
    padding: 20px 20px 20px 0;
}

//
// Registration Flow
// --------------------------------------------------

.applicant{
	position: relative;
	.thumbnail{
		height: 240px;
		background-color: @white;
		
		.btn{
			position: absolute;
			bottom: 28px;
		}
	}
}

.terms{
    height:400px;
    overflow:scroll;
    padding:0 40px;
    margin-bottom:10px;
    max-width: 97%;
    }
    
    
//
// Usage-Log
// --------------------------------------------------  
.selectpicker{	
	border:1px solid darken(@cloud, 5%);
	background-color:lighten( @well-bg, 2%);
	padding: 16px 12px 4px;
	
	.input-group{
	    margin-bottom: 8px;
	}
	.form-control{
		padding: 0;
		
	&:focus{
		border: none;
		box-shadow:none;
		border:1px solid darken(@cloud, 5%);
	} 
	}
	
	input[type=search]{
		padding-left: 3px;
	}
	
	#countries{
	    position: relative;
		right: 36px;
	    width: 470px;
	}
	
	option{
		padding: 11px 5px;
		min-height: 30px;
		font-weight: normal;
		line-height: 1.42857;
		border-bottom:1px solid @gray-lighter;
		
	 &:hover,&:focus {
	  	content:"\f044";
	    color: @gray-darker;
	    background-color: @gray-lighter;
	  }
	}
}

#select-btns{
	min-height: 100px;
	padding-top: 40px;
	margin-top: 120px;
}

	.usage-log{
		border-top: 2px solid @light-blue;
		background-color: @white;
		padding: 10px;
		margin: 10px 0;
	}

	#retractBtn{
		position: relative;
		bottom: 5px;
	}

	.country-listing{
		margin: 10px;
	}
	.country-heading{
		margin-top: 5px;
		border-top: 2px solid @light-blue;
		padding: 10px 0 15px;
		.btn{
			margin-top: 10px;
		}
	}
	.country-title{
		position: relative;;
		bottom: 10px;
	}
	.country-footer{
		background-color: @gray-lighter;
		overflow: hidden;
		padding-top:8px;
	}
	.submit-usage{
	padding: 10px 0;
}
.exclaim{
	width: 40px;
}

//
// Dashboard
// --------------------------------------------------
.dashboard{
	height: 380px;	
	margin-bottom: 20px;
}
.user-info{
	background-color: lighten(@gray-lighter, 4%);
	padding: 10px 0;
	border-top: 2px solid @light-blue;
	overflow: hidden;
	margin-bottom: 10px;

	.btn{
		margin-top: 5px;
	}
}
.user-dashboard-item{
	height: 250px;
	overflow-y: auto;
}

//
// Package Management
// --------------------------------------------------
.package-wrap{
	background-color: @white;
}
.version{
	margin-bottom: 0;
}
.download-files{
	margin: 0;
}

.current{
	color: @green;
	font-weight: bold;
	padding-top: 10px;
	text-align: center;
	font-weight: @btn-font-weight;
}

.version-title{
	color: @dark-blue;
	font-weight: bold;
	padding-top: 10px;
}

.well .panel-footer{
	overflow: hidden;
	border-right:none;
}
.panel-heading .caret{
	color: @black;
}
.status{
	padding-bottom:10px;
}
.dropdown-menu ul{
	position: absolute;
	z-index: 9999;
}

.release-package{
	margin-bottom: 40px;
	
	.panel-heading{
		padding-bottom: 3px;
	}
	.panel-footer{
		padding: 5px 15px;
	}
}
//
// Application Review
// --------------------------------------------------
//
.search-results{

.muted{
	border: 1px solid @gray-light;
	padding: 10px 0;
	background-color: @white;
}
.search-close{
	padding: 10px;
	background-color: @gray-light;
    height: 40px;
    margin: 10px 0 0;
    padding: 10px;
}
.panel-body{
	border: none;
}
.panel-title{
	margin-left: 5px;
}
.application-audit{
	margin-left: -10px;
}
.applicant-info{
	border-top:2px solid @light-blue;
	padding: 20px 10px 0;
	overflow: hidden;
	margin-bottom: 10px;
	background-color: @white;
}
.application-review{
	p{
		padding: 10px;
		border: 0;
		border-bottom: 1px solid @hr-border;
		margin: 0;
	}
	
	p:last-child{
		border-bottom: none;
	}
}
h4{
	margin-top: 0;
}

}
.application-status{
	position: relative;
	top: 8px;
}
.application-search{
	margin-bottom: 10px;
}

.searchbox{
	padding: 5px 10px;
}
.btn-close{
	position:relative;
	z-index:999;
}

// Admin Dashboard
// --------------------------------------------------

.nav-space{
	margin-top: 80px;
}
.navbar[role=admin]{
	background-color: @gray-lighter;
	border-bottom:3px solid @light-blue;

	.navbar-brand{
		color: @gray;
		font-weight: bold;
	}
}
.sidebar{
	position: fixed;
	top: 67px;
	bottom: 0px;
	left: 0px;
	z-index: 1000;
	display: block;
	padding: 20px;
	overflow-x: hidden;
	overflow-y: auto;
	background-color:darken( @dark-blue, 15%);
	border-right: 1px solid #EEE;

	a{
		color: darken(@cloud, 30%);
	}
}
.nav-sidebar {
    margin-bottom: 20px;
    margin-left: -20px;
    margin-right: -21px;
    > li{
    	border-bottom: 1px solid darken(@gray, 1.5%);	
    }
    .active{
    	background-color: @light-blue;
    	a{
    	  color: @white;
    	}
    	a:hover{
	    color: darken(@cloud, 80%);
	    
	  }
    }
}
// Footer
//-------------------------------------------------
footer{
	background-color: @white;
	color: @gray;
	height: 60px;
	padding-top: 20px;
	position: absolute;
	bottom: 0;
	width: 100%;
	border-top:1px solid @gray-lighter;
	
a{
	color: @gray;
	font-size: smaller;
}
}
footer[role=admin]{
	background-color: @gray-lighter;
	color: @gray-darker;
	height: 60px;
	padding-top: 20px;
	position: absolute;
	bottom: -60px;

	a{
		color: @gray-darker;
	}
}	

//
// Misc
// --------------------------------------------------
.btn-space{
	position:relative;
	bottom:10px;
}

